# heihachi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
assets/: test_config_tmp.json
src/: character.py  main.py
src/dc/: connector.py
src/frame_service/: __init__.py  frame_service.py
src/frame_service/json_directory/: __init__.py  json_directory.py
src/frame_service/wavu/: __init__.py  utils.py  wavu.py  wavu_importer.py  wavu_reader.py
src/framedb/: __init__.py  character.py  const.py  frame_service.py  framedb.py
src/framedb/tests/: conftest.py  test_const.py  test_framedb.py
src/heihachi/: bot.py  button.py  character.py  configurator.py  embed.py  json_movelist_reader.py  util.py
src/heihachi/tests/: test_bot.py  test_configurator.py  test_embed.py  test_json_movelist_reader.py
src/json_movelist/: asuka.json  azucena.json  bryan.json  claudio.json  feng.json  jun.json  kazuya.json  law.json  nina.json  raven.json  reina.json  steve.json  victor.json  yoshimitsu.json
src/module/: button.py  character.py  character_importer.py  configurator.py  embed.py  json_movelist_reader.py  util.py
src/module/test/: azu.json  azucena.json  claudio.json  jun.json  test_character_importer.py  (+1 more)
src/resources/: character_list.json  character_misc.json  config.json  config.sample.json  const.py
src/tests/: test_configurator.py  test_json_movelist_reader.py  test_wavu_importer.py  test_wavu_reader.py
src/wavu/: parser.py  wavu_importer.py  wavu_reader.py
static/: config.sample.json
(+97 files in other folders)
